added list cimage component. Changed the zone error in add image page.

--- a/app/components/homePage/homePage.component.html
+++ b/app/components/homePage/homePage.component.html
@@ -1,2 +1,3 @@
 <st-app-menu (menuClick)="mainMenuClick($event)"></st-app-menu>
 <st-add-image *ngIf="showAddImage"></st-add-image>
+<st-list-image *ngIf="showListImage"></st-list-image>
