sort images anf show file details implementation

--- a/app/components/listImage/listImage.component.css
+++ b/app/components/listImage/listImage.component.css
@@ -73,3 +73,15 @@ hr {
     height: 100px;
     width: 150px;
 }
+
+.sortby-div {
+    display: inline-block;
+}
+
+.sortby-options-div {
+    display: inline-block;
+}
+
+.all-files-details-span {
+    padding-left: 5%;
+}
