--- a/app/components/listImage/listImage.component.html
+++ b/app/components/listImage/listImage.component.html
@@ -36,8 +36,8 @@
                         {{file.size | byteFormat}}
                     </div>
                     <div class="list-action">
-                        <p (click)="editImage($event)">EDIT</p>
-                        <p (click)="deleteImage($event)">DELETE</p>
+                        <p (click)="editImage(file)">EDIT</p>
+                        <p (click)="deleteImage(file)">DELETE</p>
                     </div>
                 </div>
                 <div>
