--- a/app/components/listImage/listImage.component.html
+++ b/app/components/listImage/listImage.component.html
@@ -47,4 +47,4 @@
         </ul>
     </div>
 </div>
-<st-edit-image *ngIf="showImageEdit"></st-edit-image>
+<st-edit-image *ngIf="showImageEdit" [imageFile]="editImageFile"></st-edit-image>
